tests/baselines/reference/YieldExpression5_es6.errors.txt
YieldExpression5_es6.ts(3,1): error TS1109: Expression expected.


==== YieldExpression5_es6.ts (1 errors) ====
    function* foo() {
      yield*
    }
    ~
!!! error TS1109: Expression expected.